Remove Sense and modify the return type of PartitionCost